# core-JPEG

./: .gitignore  .gitmodules  README.md  prek.toml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
conformance/: iso15444-4-baseline.json
docs/: conformance.md
docs/license/: COMMERCIAL-ORDER-FORM.template.md  EVALUATION-ORDER-FORM.template.md  LICENSE-COMMERCIAL.txt  LICENSE-EVALUATION.txt  LICENSE-PHILANTHROPY-WAIVER.txt  NOTICE  PHILANTHROPY-WAIVER-CERTIFICATE.template.md  README.md
src/core_jpeg/: __init__.py  api.py  cli.py  errors.py
src/core_jpeg/impl/: __init__.py  errors.py  models.py  types.py
src/core_jpeg/impl/codecs/: __init__.py
src/core_jpeg/impl/codecs/dct/: __init__.py  bitstream.py  color.py  decoder.py  huffman.py  idct.py  markers.py  scan.py  tables.py
src/core_jpeg/impl/codecs/jpx/: __init__.py  boxes.py  codestream.py  color.py  decoder.py  markers.py  output.py  packets.py  params.py  progression.py  reconstruction.py  structures.py  tier1.py  tier1_entropy.py  tier1_passes.py  tier1_plan.py  tier1_state.py  tiles.py  wavelet.py
src/core_jpeg/impl/graphics/: __init__.py  color_math.py  icc_profiles.py
tests/: test_bitstream.py  test_color.py  test_huffman.py  test_idct_and_models.py  test_jp2_boxes.py  test_jpx_parallel_tiles.py  test_jpx_plm_plt.py  test_jpx_smoke.py  test_jpx_sop_tile_parts.py  test_openjpeg_conformance.py  test_public_api.py
tests/fixtures/jpx/: gradient_CPRL.j2k  gradient_LRCP.j2k  gradient_PCRL.j2k  gradient_RLCP.j2k  gradient_RPCL.j2k  gradient_irreversible.jp2  gradient_markers.j2k  gradient_multitile.j2k
tools/: build_openjpeg.sh  openjpeg_applicability.toml  openjpeg_conformance.py
