[project]
name = "core-jpeg"
version = "0.0.0"
description = "High-performance pure Python JPEG decoding components"
readme = "README.md"
authors = [
    { name = "Kevin Turcios", email = "turcioskevinr@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []
classifiers = ["Private :: Do Not Upload", "Development Status :: 3 - Alpha"]

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ty>=0.0.57",
]
