[project]
name = "core-jpeg"
version = "0.0.0"
description = "High-performance pure Python JPEG decoding components"
readme = "README.md"
authors = [
    { name = "Kevin Turcios", email = "turcioskevinr@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []
classifiers = ["Private :: Do Not Upload", "Development Status :: 3 - Alpha"]

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ty>=0.0.57",
]
lint = [
    "mypy >=1.16.0, <2.0.0",
    "ruff >=0.11.13, <1.0.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "C4",      # flake8-comprehensions
    "COM",     # flake8-commas
    "E",       # pycodestyle errors
    "F",       # pyflakes
    "I",       # isort (imports)
    "PLR0402", # Name compared with itself like `foo == foo`
    "PT",      # flake8-pytest-style
    "SIM",     # flake8-simplify
    "UP015",   # redundant `open()` mode parameter (like "r" is default)
    "UP018",   # Unnecessary {literal_type} call like `str("abc")`. (rewrite as a literal)
    "UP032",   # Use f-string instead of `.format()` call
    "UP034",   # Avoid extraneous parentheses
]

ignore = [
    "COM812", # over aggressively insists on trailing commas where not desirable
    "PT001",  # use @pytest.fixture() over @pytest.fixture
    "PT011",  # pytest.raises({exc}) too broad, use match param or more specific exception
    "PT012",  # pytest.raises() block should contain a single simple statement
    "PT023",  # use @pytest.mark.asyncio() over @pytest.mark.asyncio
    "SIM108", # ignore encouraging use of ternary operator
    "SIM117", # merge `with` statements for context managers that have same scope
]

[tool.mypy]
python_version = "3.14"
files = ["src/core_jpeg"]
mypy_path = "src"
show_error_codes = true

[tool.pytest.ini_options]
addopts = [
    "--cov=core_jpeg",
    "--cov-report=term-missing",
]
testpaths = ["tests"]
